add status info, style done page

--- a/templates/activity-form.html
+++ b/templates/activity-form.html
@@ -9,7 +9,7 @@
         <form name="activityForm" ng-submit="activityForm.$valid && addEditActivity()" novalidate>
             <div class="list">
                 <label class="item item-input">
-                    <span class="input-label" ng-class="{assertive: !activityForm.$valid}">Activity</span>
+                    <span class="input-label">Activity</span>
                     <input ng-model="activity.title" type="text" placeholder="Action you want to take" required>
                 </label>
 
