--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ ion-nav-view {
 
 .greyOut {
     color: #c0c0c0;
+    opacity: 0.5;
 }
 
 .crossedOut {
@@ -48,6 +49,7 @@ ion-nav-view {
 i {
     font-size: 1.3em;
 }
+
 .item-checkbox i, .item-radio i {
     font-size: 1.61em;
     margin-right: 0.3em;
@@ -63,8 +65,6 @@ i {
     font-weight: normal;
 }
 
-.doers {
-    //font-size: 1.6em;
-}
+
 
 
