add momo popup photo (first pass)

--- a/templates/activity.html
+++ b/templates/activity.html
@@ -36,9 +36,9 @@
 
         <div class="item">
             <div class="row status">
-                <div class="col col-25">
-                    Status:
-                </div>
+                <!--<div class="col col-25">-->
+                    <!--Status:-->
+                <!--</div>-->
                 <div class="col">
                     <span ng-show="status === 0">Open</span>
                     <span ng-show="status === 1" class="balanced">Completed</span>
