--- a/templates/user-bar.html
+++ b/templates/user-bar.html
@@ -7,7 +7,7 @@
         <i class="icon ion-{{user.icon}}"></i> {{user.name}}
     </a>
 
-    <a class="tab-item has-badge">
+    <a class="tab-item has-badge" ng-click="showMomo()">
         <span class="badge badge-energized">0</span>
         <i class="icon ion-ios7-paw"></i> Momo
     </a>
