add photos to momo popup

--- a/templates/done.html
+++ b/templates/done.html
@@ -13,10 +13,10 @@
         <span class="badge badge-energized">{{users.evi.points}}</span>
         <i class="icon ion-woman"></i>Evi
     </a>
-    <a class="tab-item has-badge">
-        <span class="badge badge-energized">0</span>
-        <i class="icon ion-ios7-paw"></i> Momo
-    </a>
+    <!--<a class="tab-item has-badge">-->
+        <!--<span class="badge badge-energized">0</span>-->
+        <!--<i class="icon ion-ios7-paw"></i> Momo-->
+    <!--</a>-->
 
 </div>
 
