enable points system (first pass)

--- a/templates/activity.html
+++ b/templates/activity.html
@@ -61,20 +61,21 @@
                     </span>
                 </div>
             </div>
+            <!--<div class="row">-->
+                <!--<div class="col col-25">-->
+                    <!--On:-->
+                <!--</div>-->
+                <!--<div class="col">-->
+                    <!--{{activity.completion.on | date}}-->
+                <!--</div>-->
+            <!--</div>-->
+
             <div class="row">
                 <div class="col col-25">
-                    On:
+                    Points:
                 </div>
                 <div class="col">
-                    {{activity.completion.on | date}}
-                </div>
-            </div>
-            <div class="row">
-                <div class="col col-25">
-                    Karma:
-                </div>
-                <div class="col">
-                    Coming Soon
+                    {{activity.completion.ptsGiven}}
                 </div>
             </div>
 
