enabled a point system

--- a/templates/done.html
+++ b/templates/done.html
@@ -43,7 +43,7 @@
                     <i class="icon ion-happy"></i>
                 </span>
                 <span ng-hide="activity.context === 'fun'">
-                    {{ activity.completion.pointsGiven || 0}}
+                    {{ activity.completion.ptsGiven || 0}}
                 </span>
             </span>
 
