--- a/templates/activity.html
+++ b/templates/activity.html
@@ -98,7 +98,7 @@
 
                 <div class="row">
                     <div class="col col-25">Duration:</div>
-                    <div class="col">{{activity.duration  || "not specified"}} minutes</div>
+                    <div class="col">{{activity.duration  * 15 }} minutes</div>
                 </div>
 
                 <div class="row">
