--- a/templates/user-bar.html
+++ b/templates/user-bar.html
@@ -8,7 +8,7 @@
     </a>
 
     <a class="tab-item has-badge" ng-click="showMomo()">
-        <span class="badge badge-energized">0</span>
+        <span class="badge badge-energized">{{momo}}</span>
         <i class="icon ion-ios7-paw"></i> Momo
     </a>
 
