--- a/templates/activities.html
+++ b/templates/activities.html
@@ -7,19 +7,21 @@
 <user-bar></user-bar>
 
 <ion-content id="activities" class="has-header has-subheader">
+    <!--<p><input type="text" ng-model="test"></p>-->
     <ion-list>
         <!--<ion-item class="item item-divider sorting">-->
             <!--sorted by most urgent and <a href="" ng-click="switchSorting()">shortest</a>-->
         <!--</ion-item>-->
-        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: ['-urgent', '-important', 'duration']
-                  | contextMatch: contextFilter | userMatch: userFilter"
-                  ng-hide="activity.completion.done" href="#/activity/{{activity.$id}}">
+        <!--| contextMatch: contextFilter | userMatch: userFilter"-->
+        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: activityOrdering | filter:activitiesFilterFn ">
 
             <span ng-show="activity.important && activity.urgent"><i class='icon ion-fireball'></i></span>
             <span ng-show="activity.important && !activity.urgent"><i class='icon ion-flame'></i></span>
             <span ng-show="activity.urgent && !activity.important"><i class='icon ion-ios7-timer'></i></span>
+
             <span> {{activity.title}}</span>
             <span class="item-note">{{activity.duration * 15}} min</span>
+
         </ion-item>
     </ion-list>
 </ion-content>
