--- a/templates/activities.html
+++ b/templates/activities.html
@@ -13,7 +13,7 @@
             <!--sorted by most urgent and <a href="" ng-click="switchSorting()">shortest</a>-->
         <!--</ion-item>-->
         <!--| contextMatch: contextFilter | userMatch: userFilter"-->
-        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: activityOrdering | filter:activitiesFilterFn ">
+        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: activityOrdering | filter:activitiesFilterFn" href="#/activity/{{activity.$id}}">
 
             <span ng-show="activity.important && activity.urgent"><i class='icon ion-fireball'></i></span>
             <span ng-show="activity.important && !activity.urgent"><i class='icon ion-flame'></i></span>
