add done filter

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ ion-nav-view {
 }
 
 #doneActivities .badge {
-    font-size: 1.1em !important;
+    //font-size: 1.1em !important;
 }
 
 .bar-subheader .badge {
