--- a/templates/tab-bar.html
+++ b/templates/tab-bar.html
@@ -1,4 +1,4 @@
-<div class="tabs tabs-bottom tabs-icon-only tabs-balanced">
+<div class="tabs tabs-bottom tabs-icon-only tabs-neutral">
     <a ng-repeat='context in contexts' class="tab-item"
        ng-click="$parent.pickContext(context.name)"
        ng-class="{positive: $parent.filtersSelected.context===context.name}">
