--- a/templates/activity-form.html
+++ b/templates/activity-form.html
@@ -92,17 +92,19 @@
                         <div class="track">
                             <div class="handle"></div>
                         </div>
-                    </label>
-                    Important
-                    <!--<br />-->
-                    <!--<label class="toggle">-->
-                    <!--<input type="checkbox" ng-model="activity.context.fun">-->
-                    <!--<div class="track">-->
-                    <!--<div class="handle"></div>-->
-                    <!--</div>-->
-                    <!--</label>-->
-                    <!--Fun-->
+                    </label>Important
                 </li>
+
+                <li class="item item-item-input">
+                    <label class="toggle toggle-assertive">
+                        <input type="checkbox" ng-model="activity.personal">
+                        <div class="track">
+                            <div class="handle"></div>
+                        </div>
+                    </label>Personal - <small>Cannot easily delegate</small>
+                </li>
+
+
 
                 <label class="item">
                     <button ng-hide="editMode" class="button button-block button-positive" type="submit">Add</button>
