--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,17 @@ ion-nav-view {
 
 
 #activity .badge {
-    position: relative; right: 1em !important;
+    /*position: relative; right: 1.3em !important;*/
 }
 
 #doneActivities .badge {
-    /*font-size: 1.1em !important;*/
+    font-size: 1.1em !important;
 }
 
+#doneActivities .row {
+    padding: 0;
+
+}
 .bar-subheader .badge {
     position: absolute !important;
     right: 2.6em !important;
