--- a/templates/user-bar.html
+++ b/templates/user-bar.html
@@ -1,26 +1,15 @@
 <div class="bar bar-subheader tabs tabs-icon-left bar-neutral">
     <!--<a class="tab-item" >All</a>-->
     <a ng-repeat="user in users | orderByPriority | orderBy: '-points'" class="tab-item has-badge"
-       ng-click="$parent.toggleSelected(user.name)"
-        ng-class="{positive: filtersSelected.users.indexOf(user.name) > -1}">
+       ng-click="toggleSelected(user.name)"
+        ng-class="{positive: selection.indexOf(user.name) > -1}">
         <span class="badge badge-energized">{{user.points}}</span>
         <i class="icon ion-{{user.icon}}"></i> {{user.name}}
     </a>
 
-    <a class="tab-item has-badge" ng-click="showMomo()">
-        <span class="badge badge-energized">{{momo}}</span>
-        <i class="icon ion-ios7-paw"></i> Momo
-    </a>
+    <!--<a class="tab-item has-badge" ng-click="showMomo()">-->
+        <!--<span class="badge badge-energized">{{momo}}</span>-->
+        <!--<i class="icon ion-ios7-paw"></i> Momo-->
+    <!--</a>-->
 
 </div>
-
-<!--<div class="bar bar-subheader tabs tabs-icon-left bar-neutral">-->
-    <!--<a class="tab-item has-badge" ng-click="toggleDoneFilter('toma')" ng-class="{energized: doneFilter.indexOf('toma') > -1}">-->
-        <!--<span class="badge badge-energized">{{users.toma.points}}</span>-->
-        <!--<i class="icon ion-man"></i> Toma-->
-    <!--</a>-->
-    <!--<a class="tab-item has-badge" ng-click="toggleDoneFilter('evi')" ng-class="{energized: doneFilter.indexOf('evi') > -1}">-->
-        <!--<span class="badge badge-energized">{{users.evi.points}}</span>-->
-        <!--<i class="icon ion-woman"></i>Evi-->
-    <!--</a>-->
-<!--</div>-->
