--- a/templates/done.html
+++ b/templates/done.html
@@ -4,11 +4,12 @@
     <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
 </ion-header-bar>
 
-<user-bar></user-bar>
+<user-bar users="users" selection="selection"></user-bar>
 
 <ion-content id="doneActivities" class="has-header has-subheader">
     <ion-list>
-        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: '-completion.on' | filter: doneFilterFn" href="#/activity/{{activity.$id}}">
+        {{selection}}
+        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: '-completion.on' | completed | filter: doneFilterFn" href="#/activity/{{activity.$id}}">
 
             <span class="crossedOut">{{activity.title}}</span>
 
@@ -39,13 +40,13 @@
                 <!--</div>-->
             <!--</div>-->
 
-            <div class="row" ng-show="isSelfless(activity)">
-                <div class="col col-10">
-                </div>
-                <div class="col col-90 assertive">
-                    Wow, a selfless act!
-                </div>
-            </div>
+            <!--<div class="row" ng-show="isSelfless(activity)">-->
+                <!--<div class="col col-10">-->
+                <!--</div>-->
+                <!--<div class="col col-90 assertive">-->
+                    <!--Wow, a selfless act!-->
+                <!--</div>-->
+            <!--</div>-->
 
             <span class="badge badge-light">
                 <span ng-show="activity.context === 'fun'">
