private filter works again

--- a/templates/activity-form.html
+++ b/templates/activity-form.html
@@ -92,11 +92,11 @@
 
                 <li class="item item-item-input">
                     <label class="toggle toggle-assertive">
-                        <input type="checkbox" ng-model="activity.personal">
+                        <input type="checkbox" ng-model="activity.private">
                         <div class="track">
                             <div class="handle"></div>
                         </div>
-                    </label>Personal - <small>Cannot easily delegate</small>
+                    </label>Private
                 </li>
 
 
