--- a/templates/activities.html
+++ b/templates/activities.html
@@ -4,7 +4,7 @@
        <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
 </ion-header-bar>
 
-<user-bar users="users" selection="selection"></user-bar>
+<user-bar users="users" tagged="userTags"></user-bar>
 
 <ion-content id="activities" class="has-header has-subheader">
     <!--<p><input type="text" ng-model="test"></p>-->
@@ -13,8 +13,8 @@
             <!--sorted by most urgent and <a href="" ng-click="switchSorting()">shortest</a>-->
         <!--</ion-item>-->
         <!--| contextMatch: contextFilter | userMatch: userFilter"-->
-        {{tagged}}
-        <ion-item ng-repeat="activity in activities | orderByPriority | uncomplete | activities:'owners':selection | orderBy: activityOrdering" href="#/activity/{{activity.$id}}">
+        {{userTags}}
+        <ion-item ng-repeat="activity in activities | orderByPriority | uncomplete | acties:userTags | orderBy: activityOrdering" href="#/activity/{{activity.$id}}">
 
             <span ng-show="activity.personal"><i class='icon ion-key'></i></span>
             <span ng-show="activity.important && activity.urgent"><i class='icon ion-fireball'></i></span>
@@ -23,6 +23,8 @@
 
             <span> {{activity.title}}</span>
             <span class="item-note">{{activity.duration * 15}} min</span>
+            <br />for {{activity.users}}<br />
+            <!--status {{activity.status}}<br />-->
 
         </ion-item>
     </ion-list>
