--- a/templates/user-bar.html
+++ b/templates/user-bar.html
@@ -2,7 +2,7 @@
     <!--<a class="tab-item" >All</a>-->
     <a ng-repeat="user in users | orderByPriority | orderBy: '-points'" class="tab-item has-badge"
        ng-click="toggleUserTag(user.name)"
-        ng-class="{positive: selection.indexOf(user.name) > -1}">
+        ng-class="{positive: tagged.indexOf(user.name) > -1}">
         <span class="badge badge-energized">{{user.points}}</span>
         <i class="icon ion-{{user.icon}}"></i> {{user.name}}
     </a>
