good filter components

--- a/templates/done.html
+++ b/templates/done.html
@@ -4,12 +4,12 @@
     <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
 </ion-header-bar>
 
-<user-bar users="users" selection="selection"></user-bar>
+<user-bar users="users" tagged="userTags"></user-bar>
 
 <ion-content id="doneActivities" class="has-header has-subheader">
     <ion-list>
-        {{selection}}
-        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: '-completion.on' | filter:{completion: {done:true}} " href="#/activity/{{activity.$id}}">
+        {{userTags}}
+        <ion-item ng-repeat="activity in activities | orderByPriority | complete | acties:userTags:'doers'| orderBy: '-completion.on'" href="#/activity/{{activity.$id}}">
             <span class="crossedOut">{{activity.title}}</span>
 
             <div class="row">
