wrote new directive, fixed edit forUsers

--- a/templates/done.html
+++ b/templates/done.html
@@ -10,52 +10,7 @@
     <ion-list>
         {{userTags}}
         <ion-item ng-repeat="activity in activities | orderByPriority | complete | acties:'doers':userTags| orderBy: '-completion.on'" href="#/activity/{{activity.$id}}">
-            <span class="crossedOut">{{activity.title}}</span>
-
-            <div class="row">
-                <div class="col col-10">
-                    <i class="icon ion-checkmark balanced"></i>
-                </div>
-                <div class="col col-90">
-                     <span ng-repeat="user in activity.completion.by">
-                            <b>{{user}}</b><span ng-hide="$last"> & </span>
-                    </span>
-                    for
-                    <span ng-repeat="user in activity.users">
-                        {{user}}
-                        <span ng-hide="$last"> & </span>
-                    </span>
-                </div>
-            </div>
-            <!--<div class="row">-->
-                <!--<div class="col col-10">-->
-
-                <!--</div>-->
-                <!--<div class="col col-90">-->
-                    <!--for <span ng-repeat="(user, bool) in activity.owners" ng-show="bool">-->
-                        <!--{{user}}-->
-                        <!--<span ng-hide="$last"> & </span>-->
-                    <!--</span>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="row" ng-show="isSelfless(activity)">-->
-                <!--<div class="col col-10">-->
-                <!--</div>-->
-                <!--<div class="col col-90 assertive">-->
-                    <!--Wow, a selfless act!-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <span class="badge badge-light">
-                <span ng-show="activity.context === 'fun'">
-                    <i class="icon ion-happy"></i>
-                </span>
-                <span ng-hide="activity.context === 'fun'">
-                    {{ activity.completion.ptsGiven || 0}}
-                </span>
-            </span>
-
+           <activity-done-item activity="activity"></activity-done-item>
         </ion-item>
     </ion-list>
 </ion-content>
