--- a/templates/activities.html
+++ b/templates/activities.html
@@ -9,24 +9,9 @@
 <ion-content id="activities" class="has-header has-subheader">
     <!--<p><input type="text" ng-model="test"></p>-->
     <ion-list>
-        <!--<ion-item class="item item-divider sorting">-->
-            <!--sorted by most urgent and <a href="" ng-click="switchSorting()">shortest</a>-->
-        <!--</ion-item>-->
-        <!--| contextMatch: contextFilter | userMatch: userFilter"-->
         {{userTags}} {{contextTag}}
         <ion-item ng-repeat="activity in activities | orderByPriority | uncomplete | acties:'benefactors':userTags | context:contextTag | orderBy: actieOrdering" href="#/activity/{{activity.$id}}">
-
-            <span ng-show="activity.personal"><i class='icon ion-key'></i></span>
-            <span ng-show="activity.important && activity.urgent"><i class='icon ion-fireball'></i></span>
-            <span ng-show="activity.important && !activity.urgent"><i class='icon ion-flame'></i></span>
-            <span ng-show="activity.urgent && !activity.important"><i class='icon ion-ios7-timer'></i></span>
-
-            <span> {{activity.title}}</span>
-            <span class="item-note">{{activity.duration * 15}} min</span>
-            <br />for {{activity.users}}<br />
-            context: {{activity.context}}
-            <!--status {{activity.status}}<br />-->
-
+            <activity-open-item activity="activity"></activity-open-item>
         </ion-item>
     </ion-list>
 </ion-content>
