re-ordered controllers

--- a/templates/activity-done-item.html
+++ b/templates/activity-done-item.html
@@ -16,11 +16,11 @@
     </div>
 </div>
 
-<div class="row" ng-show="isSelfless(activity)">
-    <div class="col col-10"></div>
-    <div class="col col-90 assertive">Wow, a selfless act!</div>
-    </div>
-</div>
+<!--<div class="row" ng-show="isSelfless(activity)">-->
+    <!--<div class="col col-10"></div>-->
+    <!--<div class="col col-90 assertive">Wow, a selfless act!</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 <span class="badge badge-light">
     <span ng-show="activity.context === 'fun'">
